--- a/css/styles.css
+++ b/css/styles.css
@@ -267,6 +267,12 @@ a {
 
 /* PAGINA DE VENDAS - PAGAMENTO DESAFIO NUTRIR FIT CARNAVAL */
 
+body {
+    /* max-width: 430px; Limita a largura da página para o iPhone 14 */
+    /* margin: 0 auto; Centraliza o conteúdo na tela */
+    overflow-x: hidden; /* Evita rolagem horizontal */
+}
+
 .bg-pay {
     background-color: #000000;
 }
@@ -293,7 +299,7 @@ a {
 }
 
 .cta-lp01 {
-padding-bottom: 0px;
+    padding-bottom: 0px;
 }
 
 .ld-pay {
@@ -303,35 +309,34 @@ padding-bottom: 0px;
 .link-container.btn-pay-pag1 {
     padding: 0px;
     padding-top: 0px;
-    text-align: center; /* Centraliza o conteúdo horizontalmente */
+    text-align: center;
 }
 
 .text-linksU-pay {
     margin-top: -50px !important;
-    padding: 10px 35px; /* Ajuste o padding para melhor espaçamento */
-    color: transparent; /* Torna o texto transparente */
-    font-size: 16px; /* Ajuste o tamanho da fonte conforme necessário */
-    font-weight: bold; /* Deixa o texto em negrito */
-    border: 1px solid #FAD54D; /* Borda fina na cor desejada */
-    display: inline-block; /* Permite aplicar padding e borda ao link */
-    text-decoration: none; /* Remove o sublinhado padrão do link */
-    -webkit-text-stroke: 0.5px #FAD54D; /* Cria o efeito de texto vazado */
-    text-stroke: 1px #FAD54D; /* Fallback para navegadores que não suportam -webkit */
-    background-color: transparent; /* Fundo transparente */
-    border-radius: 16px; /* Bordas arredondadas (ajuste o valor conforme necessário) */
-    transition: all 0.3s ease; /* Adiciona uma transição suave */
-    text-align: center; /* Centraliza o texto horizontalmente */
-    line-height: 1.5; /* Ajusta a altura da linha para centralizar verticalmente */
-    min-width: 150px; /* Define uma largura mínima para o botão (opcional) */
+    padding: 10px 35px;
+    color: #FAD54D;
+    font-size: 16px;
+    font-weight: bold;
+    border: 1px solid #FAD54D;
+    display: inline-block;
+    text-decoration: none;
+    -webkit-text-stroke: 0.5px #FAD54D;
+    text-stroke: 1px #FAD54D;
+    background-color: transparent;
+    border-radius: 16px;
+    transition: all 0.3s ease;
+    text-align: center;
+    line-height: 1.5;
+    min-width: 150px;
 }
 
 .text-linksU-pay:hover {
-    background-color: #FAD54D; /* Fundo amarelo ao passar o mouse */
-    color: #000; /* Texto preto ao passar o mouse */
-    -webkit-text-stroke: 1px transparent; /* Remove o contorno ao passar o mouse */
-    text-stroke: 1px transparent; /* Fallback */
+    background-color: #FAD54D;
+    color: #000;
+    -webkit-text-stroke: 1px transparent;
+    text-stroke: 1px transparent;
 }
-
 
 /* # Benefícios do Desafio */
 
@@ -353,7 +358,7 @@ padding-bottom: 0px;
 }
 
 .lista-detalhes {
-    list-style: none; /* Remove os marcadores padrão da lista */
+    list-style: none;
     padding: 0;
     margin: 0;
 }
@@ -378,22 +383,22 @@ padding-bottom: 0px;
 
 .lista-detalhes li {
     display: flex;
-    align-items: left; /* Alinha o ícone e o texto verticalmente */
-    margin-bottom: 0px; /* Espaçamento entre os itens */
+    align-items: left;
+    margin-bottom: 0px;
 }
 
 .icone-check {
     display: inline-block;
-    width: 20px; /* Largura do ícone */
-    height: 20px; /* Altura do ícone */
-    background-image: url('/images/icon_check.png'); /* Caminho do ícone */
-    background-size: cover; /* Ajusta o ícone ao tamanho do contêiner */
-    margin-right: 10px; /* Espaçamento entre o ícone e o texto */
+    width: 20px;
+    height: 20px;
+    background-image: url('/images/icon_check.png');
+    background-size: cover;
+    margin-right: 10px;
 }
 
 .lp-pay-nutri {
     text-align: left;
-    margin-top: 45px;
+    margin-top: 30px;
 }
 
 .tlt-lp04 {
@@ -417,7 +422,7 @@ padding-bottom: 0px;
 .link-container-2.btn-pay-pag2 {
     padding: 0px;
     padding-top: 20px;
-    text-align: center; /* Centraliza o conteúdo horizontalmente */
+    text-align: center;
 }
 
 .text-pay-2 {
@@ -427,28 +432,28 @@ padding-bottom: 0px;
 
 .text-linksU-pay-2 {
     margin-top: 0px !important;
-    padding: 10px 35px; /* Ajuste o padding para melhor espaçamento */
-    color: transparent; /* Torna o texto transparente */
-    font-size: 16px; /* Ajuste o tamanho da fonte conforme necessário */
-    font-weight: bold; /* Deixa o texto em negrito */
-    border: 1px solid #72D93A; /* Borda fina na cor desejada */
-    display: inline-block; /* Permite aplicar padding e borda ao link */
-    text-decoration: none; /* Remove o sublinhado padrão do link */
-    -webkit-text-stroke: 0.5px #72D93A; /* Cria o efeito de texto vazado */
-    text-stroke: 1px #72D93A; /* Fallback para navegadores que não suportam -webkit */
-    background-color: transparent; /* Fundo transparente */
-    border-radius: 16px; /* Bordas arredondadas (ajuste o valor conforme necessário) */
-    transition: all 0.3s ease; /* Adiciona uma transição suave */
-    text-align: center; /* Centraliza o texto horizontalmente */
-    line-height: 1.5; /* Ajusta a altura da linha para centralizar verticalmente */
-    min-width: 150px; /* Define uma largura mínima para o botão (opcional) */
+    padding: 10px 35px;
+    color: #72D93A;
+    font-size: 16px;
+    font-weight: bold;
+    border: 1px solid #72D93A;
+    display: inline-block;
+    text-decoration: none;
+    -webkit-text-stroke: 0.5px #72D93A;
+    text-stroke: 1px #72D93A;
+    background-color: transparent;
+    border-radius: 16px;
+    transition: all 0.3s ease;
+    text-align: center;
+    line-height: 1.5;
+    min-width: 150px;
 }
 
 .text-linksU-pay-2:hover {
-    background-color: #72D93A; /* Fundo amarelo ao passar o mouse */
-    color: #000; /* Texto preto ao passar o mouse */
-    -webkit-text-stroke: 1px transparent; /* Remove o contorno ao passar o mouse */
-    text-stroke: 1px transparent; /* Fallback */
+    background-color: #72D93A;
+    color: #000;
+    -webkit-text-stroke: 1px transparent;
+    text-stroke: 1px transparent;
 }
 
 .ftr-lp-pay {
@@ -458,6 +463,88 @@ padding-bottom: 0px;
     padding-bottom: 2px;
 }
 
-/* .row.justify-content-center.img-nutri {
-    flex-wrap: nowrap;
-} */
+/* # Depoimentos e resultados */
+
+.lp-pay-dep {
+    text-align: left;
+    margin-top: 45px;
+}
+
+.tlt-lp05 {
+    color: #FAD54D;
+    font-weight: bold;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.subtlt-dep {
+    margin-top: -10px;
+    display: block;
+    margin-bottom: 15px;
+}
+
+.img-dep {
+    margin-bottom: 20px;
+}
+
+.img-dep img {
+    max-width: 100%;
+    height: auto;
+}
+
+.link-container-2.btn-pay-pag3 {
+    padding: 0px;
+    padding-top: 10px;
+    text-align: center;
+}
+
+/* # Cronometro */
+
+.countdown-container {
+    text-align: center;
+    background-color: #000000;
+    padding: 0px;
+    border-radius: 15px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    margin-top: 20px;
+}
+
+.countdown-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.countdown-subtitle {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.countdown-timer {
+    display: flex;
+    justify-content: space-around;
+}
+
+.timer-block {
+    background-color: #131313;
+    padding: 15px;
+    border-radius: 10px;
+    width: 80px;
+    margin: 0 10px;
+    color: #72D93A;
+}
+
+.timer-block span {
+    display: block;
+    text-align: center;
+}
+
+.timer-block span:first-child {
+    font-size: 32px;
+    font-weight: bold;
+}
+
+.timer-block .timer-label {
+    font-size: 14px;
+    color: #bbb;
+}
